# gatus-k8s-operator

./: .gitignore  .licenserc.yaml  .trivyignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  charmcraft.yaml  constraints.txt  pyproject.toml  requirements.txt  task.md  tox.ini
.github/: .copilot-collections.yaml
.github/scripts/: setup-artifact-import.sh
.github/workflows/: ci.yaml  copilot-collections-update.yaml  integration_test.yaml  promote_charm.yaml  publish_charm.yaml  terraform.yaml  test.yaml
gatus_rock/: add_announcement.py  announcements.yaml  gatus_wrapper.sh  render_config.py  rockcraft.yaml
gatus_rock/config/: config.yaml
gatus_rock/patches/: 0001-increase-sql-retention-to-1-year.patch
gatus_rock/templates/: alerting.yaml.j2  announcements.yaml.j2  endpoints.yaml.j2  security.yaml.j2  storage.yaml.j2  ui.yaml.j2
lib/charms/data_platform_libs/v0/: data_interfaces.py  s3.py
lib/charms/grafana_k8s/v0/: grafana_dashboard.py
lib/charms/hydra/v0/: oauth.py
lib/charms/loki_k8s/v1/: loki_push_api.py
lib/charms/observability_libs/v0/: juju_topology.py
lib/charms/openfga_k8s/v1/: openfga.py
lib/charms/prometheus_k8s/v0/: prometheus_scrape.py
lib/charms/redis_k8s/v0/: redis.py
lib/charms/saml_integrator/v0/: saml.py
src/: actions.py  charm.py  constants.py  exceptions.py  gatus.py  validator.py
tests/: conftest.py
tests/data/: announcements-invalid.yaml  announcements.yaml  config.yaml  endpoints-invalid.yaml  endpoints-with-provider-override.yaml  endpoints-with-resolved-override.yaml  endpoints.yaml
tests/integration/: conftest.py  helper.py  test_alerting.py  test_charm.py  test_database.py  test_rock.py
tests/integration/data/: announcements.yaml  endpoints.yaml
tests/integration/postgresql_stub/: charmcraft.yaml  requirements.txt
tests/unit/: conftest.py  test_charm.py  test_render_config.py
tests/unit/data/: config.yaml
(+4 files in other folders)
